--- a/css/stylenuevo.css
+++ b/css/stylenuevo.css
@@ -34,81 +34,6 @@
     display: flex;
     margin: 10px; }
 
-.formulario {
-  text-align: center;
-  background-color: #399ea0;
-  padding: 40px;
-  margin: auto;
-  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  max-width: 400px; }
-  .formulario .formulario {
-    width: 1000px;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 4px; }
-  .formulario .formulario h4 {
-    font-size: 22px;
-    margin-bottom: 20px; }
-  .formulario .controls {
-    width: 100%;
-    background-color: white;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 5px;
-    border: 1px solid black;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px; }
-  .formulario .boton {
-    width: 100%;
-    background-color: white;
-    border: none;
-    padding: 12px;
-    color: black;
-    margin: 16px 0px;
-    font-size: 16px; }
-
-@media (max-width: 500px) {
-  .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-template-areas: "header" "hero" "main" "aside" "footer"; }
-  .header {
-    grid-area: header;
-    flex-direction: column;
-    background: black;
-    color: white; }
-  p {
-    font-family: 'Roboto', sans-serif;
-    background-color: #232526;
-    color: white; }
-  .Titular {
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    background: linear-gradient(90deg, #232526 0%, #414345 100%);
-    border-radius: 50px;
-    padding: 10px;
-    margin: 5px;
-    font-size: 30px; }
-  .titulosecnoticias {
-    font-size: 35px;
-    color: #B02C2C; }
-  img {
-    width: 100%; }
-  .redessocia {
-    display: flex;
-    justify-content: center; }
-  .redes {
-    display: flex;
-    justify-content: center;
-    width: 200px; } }
-
 * {
   margin: 0;
   padding: 0;
@@ -198,6 +123,42 @@ a {
     font-size: 30px;
     padding: 10px;
     margin: 5px; }
+  .container .formulario {
+    text-align: center;
+    background-color: #399ea0;
+    padding: 40px;
+    margin: auto;
+    box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    max-width: 400px; }
+  .container .formulario {
+    width: 1000px;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px; }
+  .container .formulario h4 {
+    font-size: 22px;
+    margin-bottom: 20px; }
+  .container .controls {
+    width: 100%;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px; }
+  .container .formulario .boton {
+    width: 100%;
+    background-color: white;
+    border: none;
+    padding: 12px;
+    color: black;
+    margin: 16px 0px;
+    font-size: 16px; }
   .container .redessocia {
     display: flex;
     justify-content: center; }
@@ -278,3 +239,41 @@ a {
     flex: 25%;
     padding: 5px;
     width: 25%; }
+
+@media (max-width: 500px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-template-areas: "header" "hero" "main" "aside" "footer"; }
+  .header {
+    grid-area: header;
+    flex-direction: column;
+    background: black;
+    color: white; }
+  p {
+    font-family: 'Roboto', sans-serif;
+    background-color: #232526;
+    color: white; }
+  .Titular {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    background: linear-gradient(90deg, #232526 0%, #414345 100%);
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    font-size: 30px; }
+  .titulosecnoticias {
+    font-size: 35px;
+    color: #B02C2C; }
+  img {
+    width: 100%; }
+  .redessocia {
+    display: flex;
+    justify-content: center; }
+  .redes {
+    display: flex;
+    justify-content: center;
+    width: 200px; } }
