--- a/sass/stylesass.scss
+++ b/sass/stylesass.scss
@@ -1,18 +1,17 @@
-//import
 
 @import 'header';
 @import 'footer';
-@import 'form';
-@import 'mediaqueries';
 
 * { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     font-family: sans-serif;
 }
+
 a{
     text-decoration: none;
     color: white;
@@ -27,16 +26,6 @@ $color-tituloasideintereses: linear-gradient(90deg, #333333 0%, #DD1818 100%);
 $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, #1E90FF 100%);
 //Mixins
 
-@mixin parrafo_perzonalizado () {
-    color: black;
-    background-color: #F1E0E0;
-    font-size: 25px;
-    font-family: 'Roboto', sans-serif;
-    margin: 10px;
-    padding: 5px;
-    border-radius: 10px;
-}
-
 .container {  display: grid;
     grid-template-columns: 0.4fr 2.2fr 0.4fr;
     grid-template-rows: 0.0fr 0.0fr 0fr 0.0fr;
@@ -48,6 +37,7 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
       "hero hero hero"
       "main main aside"
       "footer footer footer";
+
 
       .hero { grid-area: hero;
         background: black;
@@ -89,9 +79,14 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
         font-family: 'Oswald', sans-serif;
         font-size: 40px;
     }
-
     p{
-        @include parrafo_perzonalizado;
+        color: black;
+        background-color: #F1E0E0;
+        font-size: 25px;
+        font-family: 'Roboto', sans-serif;
+        margin: 10px;
+        padding: 5px;
+        border-radius: 10px;
     }
     .contenido img{
         display: flex;
@@ -124,6 +119,48 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
         font-size: 30px;
         padding: 10px;
         margin: 5px;
+    }
+    .formulario{
+        text-align: center;
+        background-color: rgb(57, 158, 160);
+        padding: 40px;
+        margin: auto;
+        box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+        border-radius: 10px;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        max-width: 400px;
+    
+    }
+    .formulario{
+        width: 1000px;
+        padding: 30px;
+        margin: auto;
+        margin-top: 100px;
+        border-radius: 4px;
+    }
+    .formulario h4{
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+    .controls{
+        width: 100%;
+        background-color: white;
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        border: 1px solid black;
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+    }
+    .formulario .boton {
+        width: 100%;
+        background-color: white;
+        border: none;
+        padding: 12px;
+        color: black;
+        margin: 16px 0px;
+        font-size: 16px;
     }
     .redessocia{
         display: flex;
@@ -223,3 +260,5 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
     
     }
 }
+
+@import 'mediaqueries';
