--- a/css/stylenuevo.css
+++ b/css/stylenuevo.css
@@ -227,8 +227,38 @@ a {
     font-family: 'Oswald', sans-serif;
     font-size: 30px;
     margin: 2px; }
-  .container .imagencalery {
-    width: 100%; }
+  .container .guiatitulo {
+    font-size: 25px;
+    font-family: 'Oswald', sans-serif; }
+  .container .rolesguia {
+    display: flex;
+    align-items: center; }
+  .container .exproltank {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    background: linear-gradient(90deg, #FEAC5E 0%, #C779D0 50%, #4BC0C8 100%);
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    font-size: 30px; }
+  .container .exroldps {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    font-size: 30px; }
+  .container .exrolsupport {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    background: linear-gradient(90deg, #FC00FF 0%, #00DBDE 100%);
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    font-size: 30px; }
+  .container .imgrol {
+    margin: 5px; }
   .container .imagencalery {
     width: 100%; }
   .container .contenedorgalery {
@@ -236,7 +266,7 @@ a {
     padding: 5px;
     flex-wrap: wrap; }
   .container .columnagalery {
-    flex: 25%;
+    flex: 50%;
     padding: 5px;
     width: 25%; }
 
@@ -257,6 +287,8 @@ a {
     font-family: 'Roboto', sans-serif;
     background-color: #232526;
     color: white; }
+  .titulonoti {
+    font-size: 15px; }
   .Titular {
     font-family: 'Oswald', sans-serif;
     color: white;
@@ -264,9 +296,11 @@ a {
     border-radius: 50px;
     padding: 10px;
     margin: 5px;
-    font-size: 30px; }
+    font-size: 10px; }
+  .titulocontacto {
+    font-size: 15px; }
   .titulosecnoticias {
-    font-size: 35px;
+    font-size: 10px;
     color: #B02C2C; }
   img {
     width: 100%; }
@@ -276,4 +310,13 @@ a {
   .redes {
     display: flex;
     justify-content: center;
-    width: 200px; } }
+    width: 200px; }
+  .rolesguia {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; }
+  .imgrol {
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 30%; } }
