--- a/sass/stylesass.scss
+++ b/sass/stylesass.scss
@@ -25,6 +25,15 @@ $color-pasideindex: linear-gradient(90deg, #FDFC47 0%, #24FE41 100%);
 $color-tituloasideintereses: linear-gradient(90deg, #333333 0%, #DD1818 100%);
 $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, #1E90FF 100%);
 //Mixins
+@mixin rol_tank{
+    font-family: 'Oswald', sans-serif;
+        color: white;
+        background: linear-gradient(90deg, #FEAC5E 0%, #C779D0 50%, #4BC0C8 100%);
+        border-radius: 10px;
+        padding: 5px;
+        margin: 5px;
+        font-size: 30px;
+}
 
 .container {  display: grid;
     grid-template-columns: 0.4fr 2.2fr 0.4fr;
@@ -242,8 +251,37 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
         font-size: 30px;
         margin: 2px;
     }
-    .imagencalery{
-        width: 100%;
+    .guiatitulo{
+        font-size: 25px;
+        font-family: 'Oswald', sans-serif;
+    }
+    .rolesguia{
+        display: flex;
+        align-items: center;
+    }
+    .exproltank{
+        @include rol_tank()
+    }
+    .exroldps{
+        font-family: 'Oswald', sans-serif;
+        color: white;
+        background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+        border-radius: 10px;
+        padding: 5px;
+        margin: 5px;
+        font-size: 30px;
+    }
+    .exrolsupport{
+        font-family: 'Oswald', sans-serif;
+        color: white;
+        background: linear-gradient(90deg, #FC00FF 0%, #00DBDE 100%);
+        border-radius: 10px;
+        padding: 5px;
+        margin: 5px;
+        font-size: 30px;
+    }
+    .imgrol{
+        margin: 5px;
     }
     .imagencalery{
         width: 100%;
@@ -254,7 +292,7 @@ $color-parrafoasiinteresescont: linear-gradient(90deg, #FF1E56 0%, #F9C942 50%, 
         flex-wrap: wrap; 
     }
     .columnagalery{
-        flex: 25%;
+        flex: 50%;
         padding: 5px;
         width: 25%;
     
